<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">emoncms</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spURL">spURL</string>
    <string name="spAPI">spAPI</string>
    <string name="title_activity_get_emom_data">GetEmomData</string>
    <string name="title_activity_loaddata">LoadData</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_adapter_feeds">Feeds</string>
    <string name="feed_id">ID</string>
    <string name="feed_userid">Userid</string>
    <string name="feed_name">Name</string>
    <string name="feed_updated">Updated</string>
    <string name="feed_value">Value</string>
    <string name="feed_tag">Tag</string>
    <string name="view_id">ID</string>
    <string name="view_name">Name</string>
    <string name="view_Update">Updated</string>
    <string name="view_Value">Value</string>
    <string name="view_tag">Tag</string>
    <string name="inline_preferences">inline_preferences</string>
    <string name="title_toggle_preference">title_toggle_preference</string>
    <string name="summary_toggle_preference">summary_toggle_preference</string>
    <string name="dialog_based_preferences">dialog_based_preferences</string>
    <string name="title_edittext_preference">title_edittext_preference</string>
    <string name="summary_edittext_preference">summary_edittext_preference</string>
    <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
    <string name="title_list_preference">title_list_preference</string>
    <string name="summary_list_preference">summary_list_preference</string>
    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
    <string name="launch_preferences">launch_preferences</string>
    <string name="title_screen_preference">title_screen_preference</string>
    <string name="summary_screen_preference">summary_screen_preference</string>
    <string name="title_next_screen_toggle_preference">title_next_screen_toggle_preference</string>
    <string name="summary_next_screen_toggle_preference">summary_next_screen_toggle_preference</string>
    <string name="title_intent_preference">title_intent_preference</string>
    <string name="summary_intent_preference">summary_intent_preference</string>
    <string name="preference_attributes">preference_attributes</string>
    <string name="title_parent_preference">title_parent_preference</string>
    <string name="summary_parent_preference">summary_parent_preference</string>
    <string name="title_child_preference">title_child_preference</string>
    <string name="summary_child_preference">summary_child_preference</string>
    <string name="pref_title1">emoncms Preferences</string>
    <string name="pref_emoncms_url">emoncms URL</string>
    <string name="pref_emoncms_url_summary">Enter the full URL to your emoncms server</string>
    <string name="pref_emoncms_url_dialog">Enter URL</string>
    <string name="pref_emoncms_api">emoncms API Key</string>
    <string name="pref_emoncms_api_summary">Enter your readonly API key</string>
    <string name="pref_emoncms_api_dialog">Enter API key</string>
    <string name="pref_emoncms_rasppi">Raspberry PI Interface</string>
    <string name="pref_emoncms_rasppi_summary">Check if Raspberry Pi Interface is running</string>
    <string name="pref_emoncms_feeds">Feeds Summary</string>
    <string name="pref_emoncms_feeds_summary">Show Feeds summary</string>
    <string name="pref_title2">emoncms Web Site Login and password</string>
    <string name="pref_emoncms_login">Login</string>
    <string name="pref_emoncms_login_summary">Enter your login to emoncms</string>
    <string name="pref_emoncms_login_dialog">Enter Login</string>
    <string name="pref_emoncms_password">Password</string>
    <string name="pref_emoncms_password_summary">Enter password for emoncms</string>
    <string name="pref_emoncms_password_dialog">Enter password</string>
    <string name="pref_title2_summary">Enter details if you wish to go to full web site</string>
    <string name="pref_default">Not Set</string>
    <string name="emoncms_url">URL to Web Server</string>
    <string name="emoncms_raspberry_pi_status">Raspberry Pi Interface </string>
    <string name="emoncms_feed_summary">Feed Summary</string>
    <string name="emoncms_last_updated">Updated</string>
    <string name="emoncms_web_site">Go to Web Site</string>
    <string name="dialog_settings">Test</string>
    <string name="dialog_settings_message">You need to set the URL and API key of your web server</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="getting_started">Getting Started</string>
    <string name="emoncms_summary_title">emoncms Summary</string>
    <string name="emomcms_rasppi_up">RFM12 to Pi interface script is up and running</string>
    <string name="emomcms_rasppi_down">RFM12 to Pi interface script is DOWN!!!</string>
    <string name="emoncms_good_feeds">Good Feeds</string>
    <string name="emoncms_bad_feeds">Bad Feeds</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="setup_error">Validation failed. Review error below and try again</string>
    <string name="btnTest">Test</string>
    <string name="txtErrorText">Text of the Error</string>
    <string name="chartTtile">Chart Title</string>
    <string name="traffic_color">COL</string>
    <string name="feed_datatype">Datatype</string>
    <string name="feed_engine">Engine</string>
    <string name="feed_public">Public</string>
    <string name="feed_size">Size</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading</string>

</resources>
