<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_title1">

        <EditTextPreference
            android:defaultValue="@string/pref_default"
            android:dialogTitle="@string/pref_emoncms_url_dialog"
            android:key="pref_key_emoncms_url"
            android:summary="@string/pref_emoncms_url_summary"
            android:title="@string/pref_emoncms_url" />

        <EditTextPreference
            android:defaultValue="@string/pref_default"
            android:dialogTitle="@string/pref_emoncms_api_dialog"
            android:key="pref_key_emoncms_api"
            android:summary="@string/pref_emoncms_api_summary"
            android:title="@string/pref_emoncms_api" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_raspberry_pi"
            android:summary="@string/pref_emoncms_rasppi_summary"
            android:title="@string/pref_emoncms_rasppi" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_feeds"
            android:summary="@string/pref_emoncms_feeds_summary"
            android:title="@string/pref_emoncms_feeds" />


    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_title2_summary"
        android:title="@string/pref_title2">

        <Preference android:summary="@string/pref_title2_summary" />

        <EditTextPreference
            android:defaultValue="@string/pref_default"
            android:dialogTitle="@string/pref_emoncms_login_dialog"
            android:key="pref_key_emoncms_login"
            android:summary="@string/pref_emoncms_login_summary"
            android:title="@string/pref_emoncms_login" />

        <EditTextPreference
            android:defaultValue="@string/pref_default"
            android:dialogTitle="@string/pref_emoncms_password_dialog"
            android:inputType="textPassword"
            android:key="pref_key_emoncms_password"
            android:summary="@string/pref_emoncms_password_summary"
            android:title="@string/pref_emoncms_password" />
    </PreferenceCategory>

</PreferenceScreen>
