<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView10"
                android:layout_span="2"
                android:text="@string/view_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_id"
                android:layout_gravity="center|right"
                android:layout_span="4"
                android:hint="@string/feed_id"
                android:text="@string/feed_id"

                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView11"
                android:layout_span="2"
                android:text="@string/view_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_name"
                android:layout_gravity="center|right"
                android:layout_span="4"
                android:text="@string/feed_name"

                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView12"
                android:layout_span="2"
                android:text="@string/view_tag"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_tag"
                android:layout_gravity="center|right"
                android:layout_span="4"
                android:text="@string/feed_tag"

                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView13"
                android:layout_span="2"
                android:text="@string/view_Value"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_value"
                android:layout_gravity="center|right"
                android:layout_span="4"
                android:text="@string/feed_value"

                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView14"
                android:layout_span="2"
                android:text="@string/view_Update"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_updated"
                android:layout_gravity="center|right"
                android:layout_span="4"
                android:text="@string/feed_updated"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>


    </TableLayout>

</RelativeLayout>